--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,9 @@
   "extends": [
     "oclif",
     "oclif-typescript"
-  ]
+  ],
+  "rules": {
+    "semi": "off",
+    "object-curly-spacing": "off"
+  }
 }
