--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,8 @@
   ],
   "rules": {
     "semi": "off",
-    "object-curly-spacing": "off"
+    "object-curly-spacing": "off",
+    "arrow-parens": "off",
+    "new-cap": "off",
   }
 }
