--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@oclif/core": "^2.0.7",
     "@oclif/plugin-help": "^5.2.1",
     "@oclif/plugin-plugins": "^2.2.4",
-    "immich-sdk": "^0.1.1"
+    "fdir": "^5.3.0",
+    "immich-sdk": "^0.1.1",
+    "mime-types": "^2.1.35",
+    "systeminformation": "^5.17.8"
   },
   "devDependencies": {
     "@oclif/test": "^2.3.3",
     "@types/chai": "^4.3.4",
+    "@types/mime-types": "^2.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.18.11",
     "chai": "^4.3.7",
