--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@oclif/core": "^2.0.7",
     "@oclif/plugin-help": "^5.2.1",
     "@oclif/plugin-plugins": "^2.2.4",
+    "axios": "^1.3.2",
     "fdir": "^5.3.0",
+    "form-data": "^4.0.0",
     "immich-sdk": "^0.1.1",
     "mime-types": "^2.1.35",
     "systeminformation": "^5.17.8"
