--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@oclif/plugin-help": "^5.2.1",
     "@oclif/plugin-plugins": "^2.2.4",
     "axios": "^1.3.2",
+    "chokidar": "^3.5.3",
     "fdir": "^5.3.0",
     "form-data": "^4.0.0",
     "immich-sdk": "^0.1.1",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@oclif/test": "^2.3.3",
     "@types/chai": "^4.3.4",
+    "@types/chokidar": "^2.1.3",
     "@types/mime-types": "^2.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.18.11",
