--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,9 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2019",
+    "composite": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
