--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "chokidar": "^3.5.3",
     "fdir": "^5.3.0",
     "form-data": "^4.0.0",
-    "immich-sdk": "^0.1.1",
     "mime-types": "^2.1.35",
     "rxjs": "^7.8.0",
     "systeminformation": "^5.17.8"
@@ -33,6 +32,7 @@
     "@oclif/test": "^2.3.3",
     "@types/chai": "^4.3.4",
     "@types/chokidar": "^2.1.3",
+    "@types/js-yaml": "^4.0.5",
     "@types/mime-types": "^2.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.18.11",
@@ -40,12 +40,14 @@
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.3",
+    "immich-sdk": "^1.62.0",
     "mocha": "^9.2.2",
     "oclif": "^3.6.1",
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "yaml": "^2.3.1"
   },
   "oclif": {
     "bin": "immich",
