--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.3",
     "immich-sdk": "^1.62.0",
+    "jest": "^29.5.0",
     "mocha": "^9.2.2",
     "oclif": "^3.6.1",
     "shx": "^0.3.4",
@@ -65,7 +66,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
-    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "jest",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
