--- a/package.json
+++ b/package.json
@@ -17,37 +17,41 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
-    "@oclif/core": "^2.0.7",
-    "@oclif/plugin-help": "^5.2.1",
-    "@oclif/plugin-plugins": "^2.2.4",
-    "axios": "^1.3.2",
+    "@oclif/core": "^2.8.7",
+    "@oclif/plugin-help": "^5.2.10",
+    "@oclif/plugin-plugins": "^3.1.5",
+    "axios": "^1.4.0",
     "chokidar": "^3.5.3",
-    "fdir": "^5.3.0",
+    "fdir": "^6.0.1",
     "form-data": "^4.0.0",
     "mime-types": "^2.1.35",
-    "rxjs": "^7.8.0",
-    "systeminformation": "^5.17.8"
+    "rxjs": "^7.8.1",
+    "systeminformation": "^5.18.4"
   },
   "devDependencies": {
-    "@oclif/test": "^2.3.3",
-    "@types/chai": "^4.3.4",
+    "@oclif/test": "^2.3.25",
+    "@types/chai": "^4.3.5",
     "@types/chokidar": "^2.1.3",
+    "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.5",
     "@types/mime-types": "^2.1.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^16.18.11",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.3.1",
     "chai": "^4.3.7",
-    "eslint": "^7.32.0",
+    "eslint": "^8.43.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.3",
     "immich-sdk": "^1.62.0",
     "jest": "^29.5.0",
-    "mocha": "^9.2.2",
-    "oclif": "^3.6.1",
+    "jest-when": "^3.5.2",
+    "mocha": "^10.2.0",
+    "mock-fs": "^5.2.0",
+    "oclif": "^3.9.1",
     "shx": "^0.3.4",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.4",
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3",
     "yaml": "^2.3.1"
   },
   "oclif": {
