--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "@types/js-yaml": "^4.0.5",
     "@types/mime-types": "^2.1.1",
     "@types/mocha": "^10.0.1",
+    "@types/mock-fs": "^4.13.1",
     "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
     "chai": "^4.3.7",
     "eslint": "^8.43.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.3",
+    "eslint-plugin-unicorn": "^47.0.0",
     "immich-sdk": "^1.62.0",
     "jest": "^29.5.0",
     "jest-when": "^3.5.2",
@@ -68,7 +71,6 @@
     "build": "shx rm -rf dist && tsc -b",
     "lint": "eslint . --ext .ts --config .eslintrc",
     "postpack": "shx rm -f oclif.manifest.json",
-    "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "jest",
     "version": "oclif readme && git add README.md"
