--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,10 @@
 {
-  "extends": [
-    "oclif",
-    "oclif-typescript"
-  ],
+  "extends": ["oclif", "oclif-typescript", "prettier"],
   "rules": {
     "semi": "off",
     "object-curly-spacing": "off",
     "arrow-parens": "off",
     "new-cap": "off",
-    "no-await-in-loop": "off",
+    "no-await-in-loop": "off"
   }
 }
