--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^8.43.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.3",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "immich-sdk": "^1.62.0",
     "jest": "^29.5.0",
