--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,16 @@
 {
-  "extends": ["oclif", "oclif-typescript", "prettier"],
+  "extends": ["prettier"],
   "rules": {
     "semi": "off",
     "object-curly-spacing": "off",
     "arrow-parens": "off",
     "new-cap": "off",
     "no-await-in-loop": "off"
+  },
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
+  "env": {
+    "es6": true
   }
 }
