--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unicorn": "^47.0.0",
+    "glob": "^10.3.1",
     "immich-sdk": "^1.62.0",
     "jest": "^29.5.0",
     "jest-message-util": "^29.5.0",
     "jest-when": "^3.5.2",
     "mocha": "^10.2.0",
     "mock-fs": "^5.2.0",
+    "picomatch": "^2.3.1",
     "shx": "^0.3.4",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
