--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": ["prettier"],
+  "plugins": ["jest"],
   "rules": {
     "semi": "off",
     "object-curly-spacing": "off",
@@ -8,9 +9,11 @@
     "no-await-in-loop": "off"
   },
   "parserOptions": {
-    "ecmaVersion": "latest"
+    "ecmaVersion": 2023,
+    "sourceType": "module"
   },
   "env": {
-    "es6": true
+    "es6": true,
+    "node": true
   }
 }
