--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "glob": "^10.3.1",
     "immich-sdk": "^1.62.0",
     "jest": "^29.5.0",
+    "jest-extended": "^4.0.0",
     "jest-message-util": "^29.5.0",
     "jest-when": "^3.5.2",
     "mock-fs": "^5.2.0",
@@ -58,6 +59,11 @@
     "lint": "eslint . --ext .ts --config .eslintrc",
     "prepack": "yarn build ",
     "test": "jest"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "jest-extended/all"
+    ]
   },
   "engines": {
     "node": ">=12.0.0"
